--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,19 @@
 [tox]
-envlist=
-    lint
-    py{27,35,36,37}-marshmallow2
-    py{35,36,37}-marshmallow3
-    py27-lowest
-    docs
+envlist = lint,py35,py36,py37,docs
 
 [testenv]
-extras = tests
-deps =
-    marshmallow2: marshmallow>=2.15.2,<3.0.0
-    marshmallow3: marshmallow>=3.0.0rc2,<4.0.0
-    lowest: marshmallow==2.0.0
-    lowest: sqlalchemy==0.9.7
+extras = tests,reco
 commands = pytest {posargs}
 
 [testenv:lint]
-deps = pre-commit~=1.16
+deps = pre-commit~=1.14
 skip_install = true
 commands = pre-commit run --all-files
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
 extras =
+skip_install = true
 commands = sphinx-build docs/ docs/_build {posargs}
 
 ; Below tasks are for development only (not run in CI)
@@ -32,9 +23,15 @@ deps =
   -rdocs/requirements.txt
   sphinx-autobuild
 extras =
-commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z marshmallow_sqlalchemy
+skip_install = true
+commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z src/marshmallow-sqlalchemy
 
 [testenv:watch-readme]
 deps = restview
 skip_install = true
 commands = restview README.rst
+
+[testenv:benchmark]
+extras = reco
+usedevelop = true
+commands = python performance/benchmark.py --iterations=100 --repeat=3
